# chessbot

./: .gitignore  README.md
model-1/helper/: fast_eval_pos.py  static_exchange_eval.py
model-2/: generate_chess_dataset.py  requirements.txt  train_chessnet_stockfish.py
model-3/: chess_ai.py  chess_ai_game.py  chess_model.py  generate_dataset.py  neural_network.py  preprocess_data.py  train_model.py
model-3/extra/: chess_ai.py  main.py  minimax.py  test.py  train.py
ryan/: chess_game.py  chessnet.py  generate_chess_dataset.py  import_lichess.py  monte_carlo_search.py  test_chessnet.py  train_chessnet_stockfish.py
ryan-2/: chessnet.py  test_chessnet.py  train_chessnet_stockfish.py
ryan-2/helper/: board_to_tensor.py  chessnet.py  evaluator.py  train_chessnet_stockfish.py
ryan/c++ test/: CMakeLists.txt  Makefile  README.md  board.cpp  board.h  chess_agent  chess_agent.cpp  chessnet_evaluator.h  define_train_export.py  engine_vs_stockfish  engine_vs_stockfish.cpp  engine_vs_stockfish.h  evaluator.h  export_model.py  fen_utils.h  main.cpp  minimax.h  uci_engine.h
ryan/helper/: board_to_tensor.py  evaluator.py  see.py  static_exchange_eval.py
self-play-supervised/: chessnet.py  helper.py  test.py  train.py
